--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,9 @@
-name: Upload Go test results
+name: Test
 
 on: [push]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -18,10 +17,5 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Install dependencies
         run: go mod download
-      - name: Test with Go
-        run: go test ./... -json > TestResults-${{ matrix.go-version }}.json
-      - name: Upload Go test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: Go-results-${{ matrix.go-version }}
-          path: TestResults-${{ matrix.go-version }}.json
+      - name: Test
+        run: go test ./...
